<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/orange"
                android:textSize="26sp" />

            <RelativeLayout
                android:id="@+id/rating_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/like_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/like" />

                <TextView
                    android:id="@+id/green_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/like_image"
                    android:textColor="@color/green"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/symbol_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/green_number"
                    android:text="@string/symbol"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/orange_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/symbol_text"
                    android:textColor="@color/orange"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating_layout"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:text="@string/ratings_text"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_below="@+id/rating_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/online_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:layout_centerHorizontal="true"
                android:textColor="@color/green"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/online_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawablePadding="3dp"
                android:drawableStart="@drawable/point"
                android:gravity="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/fire"
                android:gravity="center"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sold_text"
                android:layout_margin="7dp"
                android:background="@drawable/rectangle">

                <TextView
                    android:id="@+id/visitors_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="200 visitors"
                    android:textColor="@color/blue"
                    android:textSize="18sp" />


                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/visitors_text"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:max="1000"
                    android:min="50"
                    android:progressDrawable="@drawable/seekbar_drawable_progress"
                    android:splitTrack="false"
                    android:thumb="@drawable/seekbar_drawable_thumb" />

                <RelativeLayout
                    android:id="@+id/checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/seekBar"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:id="@+id/only_mobile_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/only_mobile"
                        android:theme="@style/MyCheckbox" />

                    <CheckBox
                        android:id="@+id/only_top_tier_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/only_mobile_checkbox"
                        android:text="@string/only_top_tier"
                        android:theme="@style/MyCheckbox" />

                    <CheckBox
                        android:id="@+id/no_mobile_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="4dp"
                        android:text="@string/no_mobile"
                        android:theme="@style/MyCheckbox" />

                    <CheckBox
                        android:id="@+id/prime_filter_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/only_mobile_checkbox"
                        android:text="@string/prime_filter"
                        android:theme="@style/MyCheckbox" />
                </RelativeLayout>


                <EditText
                    android:id="@+id/url_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/checkbox_layout"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_selector"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingBottom="5dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:text=""
                    tools:ignore="RtlSymmetry" />


                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/url_edit_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button"
                    android:text=""
                    android:textColor="@color/white" />


            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>